[package]
name = "agent_macro"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
agent_schema.workspace = true
agent_prompts.workspace = true
# agent_actions.workspace = true
agent_provider.workspace = true