[package]
name = "agent_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace      = true
futures.workspace      = true
async-openai.workspace = true
async-trait.workspace  = true
agent_schema.workspace = true
