[package]
name = "agent_utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde_json.workspace = true
rust_mermaid.workspace = true
base64.workspace = true
reqwest.workspace = true
anyhow.workspace = true
readability.workspace = true
url.workspace = true
percent-encoding.workspace = true
image.workspace = true