[package]
name = "agentx_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_environment.workspace = true
agent_schema.workspace = true
agent_roles.workspace = true
agent_memory.workspace = true
agent_provider.workspace = true

tokio = "*"

# for logging
tracing.workspace = true